--- a/style.css
+++ b/style.css
@@ -1,16 +1,40 @@
+
+body {
+    background-color: cyan;
+    background: linear-gradient(to top left, cyan, rgb(9, 131, 187));
+}
 h1 {
     text-align: center;
     font-size: 40px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-body {
-    background-color: cyan;
+#enterWord-container {
+    padding: 1rem;
+    display: none;
 }
-#playGame {
+#theWord {
+    padding: .4rem;
+    border-radius: 12px;
+    font-size: 1.2rem;
+}
+#enterWord {
+    background-color: green;
+    padding: 1rem;
+    border-radius: 20px;
+    font-size: 1.2rem;
+}
+#word-container {
+    background-color: white;
+    height: 15rem;
+    width: 80%;
+    border-radius: 14px;
+    margin: 2rem auto;
+}
+#playNow {
     padding: 1rem;
     border-radius: 50%;
-    margin: 1rem;
     font-size: 1.5rem;
+    margin: 1.5rem;
 
 }
 footer {
@@ -18,7 +42,7 @@ footer {
     padding: 1rem;
     border-radius: 12px;
 }
-.letters {
+#letters {
     display: flex;
     justify-content: space-around;
     font-size: 2rem;
