--- a/style.css
+++ b/style.css
@@ -24,18 +24,38 @@ h1 {
     font-size: 1.2rem;
 }
 #word-container {
+    display: flex;
+    justify-content: space-around;
     background-color: white;
     height: 15rem;
-    width: 80%;
+    width: 85%;
     border-radius: 14px;
     margin: 2rem auto;
+}
+#wordInPlay {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 1rem;
+    align-items: center;
+    font-size: 2.5rem;
+}
+.unknownLtrs {
+    width: 2rem;
+    text-align: center;
+    border-bottom: 5px solid black;
+    line-height: 1.5rem;
+    margin: 1rem;
+    padding: 0 0 1rem 0;
+}
+.space {
+    border: none;
 }
 #playNow {
     padding: 1rem;
     border-radius: 50%;
     font-size: 1.5rem;
     margin: 1.5rem;
-
 }
 footer {
     background-color: green;
