--- a/style.css
+++ b/style.css
@@ -3,10 +3,11 @@ body {
     background-color: cyan;
     background: linear-gradient(to top left, cyan, rgb(9, 131, 187));
     height: 100vh;
+    font-size: 62.5%;
 }
 h1 {
     text-align: center;
-    font-size: 40px;
+    font-size: 4rem;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 #enterWord-container {
@@ -14,18 +15,18 @@ h1 {
     padding: 1rem;
     display: none;
     background-color: rgb(230, 221, 92);
-    border: 4px solid black;
+    border: 1px solid black;
     border-radius: 14px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
-#theWord {
-    padding: .4rem;
+#theWord-input {
+    padding: .5rem;
     border-radius: 12px;
     font-size: 1.2rem;
 }
-#enterWord {
+#enterWord-button {
     background-color: green;
     padding: 1rem;
     border-radius: 20px;
@@ -35,7 +36,6 @@ h1 {
     display: none;
     justify-content: center;
     background-color: white;
-    /* height: 20rem; */
     width: 85%;
     border: 1px solid black;
     border-radius: 14px;
@@ -67,11 +67,13 @@ h1 {
     border: none;
     width: 3rem;
 }
-#playNow {
+#playNow-button {
     position: relative;
-    padding: 1rem;
+    padding: 2.2rem;
     border-radius: 50%;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
+    background-color: rgb(230, 221, 92);
+    border: 1px solid black;
 }
     #playBtn-container {
     position: absolute;
