--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body {
-    background-color: cyan;
+    /* background-color: cyan; */
     background: linear-gradient(to top left, cyan, rgb(9, 131, 187));
     height: 100vh;
     font-size: 62.5%;
@@ -14,23 +14,26 @@ h1 {
     position: absolute;
     padding: 1rem;
     display: none;
-    background-color: rgb(230, 221, 92);
+    background: linear-gradient(to left top, rgb(230, 221, 92), whitesmoke, rgb(230, 221, 92));;
     border: 1px solid black;
     border-radius: 14px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    box-shadow: 2px 2px grey;
 }
 #theWord-input {
     padding: .5rem;
     border-radius: 12px;
     font-size: 1.2rem;
+    box-shadow: 1px 1px grey;
 }
 #enterWord-button {
-    background-color: green;
+    background: linear-gradient(to top, green, rgb(166, 220, 183), green);
     padding: 1rem;
     border-radius: 20px;
     font-size: 1.2rem;
+    box-shadow: 1px 1px grey;
 }
 #word-container {
     display: none;
@@ -40,6 +43,7 @@ h1 {
     border: 1px solid black;
     border-radius: 14px;
     margin: 2rem auto;
+    box-shadow: 2px 2px grey;
 }
 #wordInPlay {
     display: flex;
@@ -72,8 +76,9 @@ h1 {
     padding: 2.2rem;
     border-radius: 50%;
     font-size: 2.5rem;
-    background-color: rgb(230, 221, 92);
+    background: linear-gradient(to left top, rgb(230, 221, 92), whitesmoke, rgb(230, 221, 92));
     border: 1px solid black;
+    box-shadow: 2px 2px grey;
 }
     #playBtn-container {
     position: absolute;
@@ -85,10 +90,11 @@ h1 {
     display: none;
     justify-content: space-around;
     font-size: 2rem;
-    background-color: green;
+    background: linear-gradient(to right, green, rgb(166, 220, 183), green);
     padding: 1rem;
     border: 1px solid black;
     border-radius: 12px;
+    box-shadow: 2px 2px grey;
     
 }
 .letter:hover {
