--- a/style.css
+++ b/style.css
@@ -83,11 +83,36 @@ h2 {
     border: 1px solid black;
     box-shadow: 2px 2px grey;
 }
-    #playBtn-container {
+#playBtn-container {
     position: absolute;
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
+}
+#playerName-container {
+    position: absolute;
+    padding: 1rem;
+    display: none;
+    background: linear-gradient(to left top, rgb(230, 221, 92), whitesmoke, rgb(230, 221, 92));;
+    border: 1px solid black;
+    border-radius: 14px;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: 2px 2px grey;
+}
+#name-input {
+    padding: .5rem;
+    border-radius: 12px;
+    font-size: 1.2rem;
+    box-shadow: 1px 1px grey;
+}
+#name-button {
+    background: linear-gradient(to top, green, rgb(166, 220, 183), green);
+    padding: 1rem;
+    border-radius: 20px;
+    font-size: 1.2rem;
+    box-shadow: 1px 1px grey;
 }
 #letters {
     display: none;
