--- a/style.css
+++ b/style.css
@@ -135,3 +135,22 @@ h2 {
     justify-content: space-around;
     margin: 2rem;
 }
+@media only screen and (max-width: 600px) {
+    #letters {
+        flex-wrap: wrap;
+        letter-spacing: .5rem;
+    }
+    .unknownLtrs {
+        width: 1rem;
+        text-align: center;
+        border-bottom: 5px solid black;
+        line-height: 1.1rem;
+        margin: .5rem;
+        padding: .5rem;
+        background-color: black;
+    }
+    .space {
+        border: none;
+        width: 1.5rem;
+    }
+  }
