--- a/style.css
+++ b/style.css
@@ -136,21 +136,24 @@ h2 {
     margin: 2rem;
 }
 @media only screen and (max-width: 600px) {
+    #word-container {
+        width: 100%;
+    }    
     #letters {
         flex-wrap: wrap;
         letter-spacing: .5rem;
     }
     .unknownLtrs {
-        width: 1rem;
+        font-size: 1.5rem;
         text-align: center;
         border-bottom: 5px solid black;
         line-height: 1.1rem;
         margin: .5rem;
-        padding: .5rem;
+        padding: .3rem;
         background-color: black;
     }
     .space {
         border: none;
-        width: 1.5rem;
+        width: 1.2rem;
     }
   }
