fixed to reveal remaining letters after loss

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-
+*:focus {
+    outline:none
+}
 body {
     /* background-color: cyan; */
     background: linear-gradient(to top left, cyan, rgb(9, 131, 187));
@@ -81,7 +83,10 @@ h2 {
     font-size: 2.5rem;
     background: linear-gradient(to left top, rgb(230, 221, 92), whitesmoke, rgb(230, 221, 92));
     border: 1px solid black;
-    box-shadow: 2px 2px grey;
+    box-shadow: 3px 3px grey;
+}
+#playNow-button:active {
+    transform: translateY(2px) scale(.9);
 }
 #playBtn-container {
     position: absolute;
@@ -155,6 +160,14 @@ h2 {
     justify-content: space-around;
     margin: 2rem;
 }
+@keyframes fade {
+    from {
+        opacity: 1;
+    }
+    to {
+        opacity: 0;
+    }
+}
 @media only screen and (max-width: 600px) {
     #word-container {
         width: 100%;
@@ -177,3 +190,4 @@ h2 {
         width: 1.2rem;
     }
   }
+  
