--- a/style.css
+++ b/style.css
@@ -10,16 +10,18 @@ body {
 h1 {
     text-align: center;
     font-size: 4rem;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Acme', sans-serif;
+    padding: 2rem 0 0 0;
 }
 h2 {
     font-size: 1.8rem;
+    font-family: 'Acme', sans-serif;
 }
 #enterWord-container {
     position: absolute;
     padding: 1rem;
     display: none;
-    background: linear-gradient(to left top, rgb(230, 221, 92), whitesmoke, rgb(230, 221, 92));;
+    background: linear-gradient(to top, gold, whitesmoke, gold);
     border: 1px solid black;
     border-radius: 14px;
     top: 50%;
@@ -34,7 +36,7 @@ h2 {
     box-shadow: 1px 1px grey;
 }
 #enterWord-button {
-    background: linear-gradient(to top, green, rgb(166, 220, 183), green);
+    background: linear-gradient(to top right, green, rgb(166, 220, 183), green);
     padding: 1rem;
     border-radius: 20px;
     font-size: 1.2rem;
@@ -42,13 +44,14 @@ h2 {
 }
 #word-container {
     display: none;
-    justify-content: center;
+    justify-content: space-evenly;
     background-color: white;
     width: 85%;
     border: 1px solid black;
     border-radius: 14px;
     margin: 2rem auto;
     box-shadow: 2px 2px grey;
+    font-family: 'Indie Flower', cursive;
 }
 #wordInPlay {
     display: flex;
@@ -76,12 +79,15 @@ h2 {
     border: none;
     width: 3rem;
 }
+button {
+    font-family: 'Acme', sans-serif;
+}
 #playNow-button {
     position: relative;
     padding: 2.2rem;
     border-radius: 50%;
     font-size: 2.5rem;
-    background: linear-gradient(to left top, rgb(230, 221, 92), whitesmoke, rgb(230, 221, 92));
+    background: linear-gradient(to left top, gold, whitesmoke, gold);
     border: 1px solid black;
     box-shadow: 3px 3px grey;
 }
@@ -98,7 +104,7 @@ h2 {
     position: absolute;
     padding: 1rem;
     display: none;
-    background: linear-gradient(to left top, rgb(230, 221, 92), whitesmoke, rgb(230, 221, 92));;
+    background: linear-gradient(to top, gold, whitesmoke, gold);;
     border: 1px solid black;
     border-radius: 14px;
     top: 50%;
@@ -113,7 +119,7 @@ h2 {
     box-shadow: 1px 1px grey;
 }
 #name-button {
-    background: linear-gradient(to top, green, rgb(166, 220, 183), green);
+    background: linear-gradient(to top right, green, rgb(166, 220, 183), green);
     padding: 1rem;
     border-radius: 20px;
     font-size: 1.2rem;
@@ -122,8 +128,9 @@ h2 {
 #alert-window {
     position: absolute;
     padding: 1rem;
+    text-align: center;
     display: none;
-    background: linear-gradient(to left top, rgb(230, 221, 92), whitesmoke, rgb(230, 221, 92));;
+    background: linear-gradient(to top, gold, whitesmoke, gold);
     border: 1px solid black;
     border-radius: 14px;
     top: 50%;
@@ -133,7 +140,7 @@ h2 {
     z-index: 15;
 }
 #alert-button {
-    background: linear-gradient(to top, green, rgb(166, 220, 183), green);
+    background: linear-gradient(to top right, green, rgb(166, 220, 183), green);
     padding: 1rem;
     border-radius: 20px;
     font-size: 1.2rem;
@@ -148,6 +155,8 @@ h2 {
     border: 1px solid black;
     border-radius: 12px;
     box-shadow: 2px 2px grey;
+    font-weight: bold;
+    font-family: 'Acme', sans-serif;
     
 }
 .letter:hover {
@@ -157,8 +166,15 @@ h2 {
 #player-Stats {
     display: none;
     font-size: 2rem;
+    font-family: 'Acme', sans-serif;
     justify-content: space-around;
     margin: 2rem;
+    background: linear-gradient(to top, gold, khaki, gold);
+    border: 2px black solid;
+    border-radius: 12px;
+    box-shadow: 2px 2px grey;
+    align-items: center;
+    padding: 4px;
 }
 @keyframes fade {
     from {
@@ -182,7 +198,7 @@ h2 {
         border-bottom: 5px solid black;
         line-height: 1.1rem;
         margin: .5rem;
-        padding: .2rem;
+        padding: .25rem;
         background-color: black;
     }
     .space {
