--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 }
 h1 {
     text-align: center;
+    text-shadow: 2px 2px whitesmoke;
     font-size: 4rem;
     font-family: 'Acme', sans-serif;
     padding: 2rem 0 0 0;
@@ -19,6 +20,7 @@ h2 {
 }
 #enterWord-container {
     position: absolute;
+    text-align: center;
     padding: 1rem;
     display: none;
     background: linear-gradient(to top, gold, whitesmoke, gold);
@@ -81,6 +83,7 @@ h2 {
 }
 button {
     font-family: 'Acme', sans-serif;
+    text-shadow: 1px 1px whitesmoke;
 }
 #playNow-button {
     position: relative;
@@ -102,6 +105,7 @@ button {
 }
 #playerName-container {
     position: absolute;
+    text-align: center;
     padding: 1rem;
     display: none;
     background: linear-gradient(to top, gold, whitesmoke, gold);;
@@ -166,6 +170,7 @@ button {
 #player-Stats {
     display: none;
     font-size: 2rem;
+    text-shadow: 2px 2px whitesmoke;
     font-family: 'Acme', sans-serif;
     justify-content: space-around;
     margin: 2rem;
@@ -175,6 +180,11 @@ button {
     box-shadow: 2px 2px grey;
     align-items: center;
     padding: 4px;
+}
+#score-h2 {
+    text-decoration: underline;
+    padding: 0 0 .1rem 0;
+    margin: 0 0 .2rem 0;
 }
 @keyframes fade {
     from {
@@ -188,9 +198,12 @@ button {
     #word-container {
         width: 100%;
     }    
+    button {
+        font-size: .7rem;
+        margin: .8rem;
+    };
     #letters {
         flex-wrap: wrap;
-        letter-spacing: .5rem;
     }
     .unknownLtrs {
         font-size: 1.5rem;
