--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ h2 {
 }
 #word-container {
     display: none;
+    text-align: center;
     justify-content: space-evenly;
     background-color: white;
     width: 85%;
@@ -54,6 +55,15 @@ h2 {
     margin: 2rem auto;
     box-shadow: 2px 2px grey;
     font-family: 'Indie Flower', cursive;
+}
+#round-status {
+    display: flex;
+    justify-content: center;
+    padding: 4px;
+    letter-spacing: 1.4;
+    text-align: center;
+    font-size: 2rem;
+    font-weight: bold;
 }
 #wordInPlay {
     display: flex;
