--- a/style.css
+++ b/style.css
@@ -212,6 +212,7 @@ button {
 }
 .letter:hover {
     transform: scale(1.3);
+    text-decoration: underline;
     cursor: pointer;
 }
 #player-Stats {
@@ -227,6 +228,13 @@ button {
     box-shadow: 2px 2px grey;
     align-items: center;
     padding: 4px;
+}
+#player-Stats .dot {
+  height: 25px;
+  width: 25px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
 }
 #score-h2 {
     text-decoration: underline;
@@ -288,4 +296,3 @@ button {
         width: 1.2rem;
     }
   }
-  
